Fixing layout issues

--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -4,6 +4,12 @@
     min-width: 300px;
     padding-top: 5rem;
     section {
+        h1 {
+            font-size: 3.2rem;
+            font-weight: 600;
+            color:white;
+            margin-bottom: 3rem
+        }
         h2 {
             font-size: 42px;
             font-weight: 600;
@@ -26,7 +32,7 @@
         .banner-widget-heading
         {
             h2 {
-                font-size: 56px;
+                font-size: 3.2rem;
                 font-weight: 600;
                 line-height: 1;
                 color: white;
